--- a/src/blocks/banner.pug
+++ b/src/blocks/banner.pug
@@ -1,4 +1,5 @@
-section.banner
+section.banner.isAnimate
+    .banner_parallax
     .banner__content
         .banner__content_bg.banner__content_bg-grayDark
         .banner__content_bg.banner__content_bg-grayLight
