--- a/src/blocks/projects.pug
+++ b/src/blocks/projects.pug
@@ -13,7 +13,7 @@ section.projects.isAnimate
                 h3.page__title-h3 My latest projects
         +item("assets/img/img-project-1.png", 'JOBMAP')
         +item("assets/img/img-project-2.png", 'ScreenTrack')
-        +item("assets/img/img-project-3.png", 'CONSULTIFY')
+        +item("assets/img/img-project-3.png", 'Meetify')
         .projects-items__item.projects-items__item-main
             .projects-items__item-content
                 h3.page__title-h3 Check out my latest episodes:
