--- a/src/less/blocks/footer.less
+++ b/src/less/blocks/footer.less
@@ -12,6 +12,7 @@
         font-weight: bold;
         // font-size: 18px;
         font-size: 1vw;
+        .xs(font-size, 1vw * 4);
         line-height: 148.9%;
         letter-spacing: -0.01em;
     }
