--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -6,9 +6,14 @@
     display: flex;
     align-items: center;
     top: 8%;
+    .md(top, 5%);
     left: 10%;
+    .from(@break_md,{
+        opacity: 0;
+    });
     .header__title{
         .size(6);
+        .size-md(12);
         font-family:'@{Roboto}-Black';
         font-weight: 900;
         // font-size: 38px;
@@ -17,6 +22,11 @@
         letter-spacing: -0.025em;
         position: relative;
         left: 4%;
+        .md(left, 15%);
+        .xs-block({
+            left: 4%;
+            font-size: 4vw;
+        });
         bottom: 4px;
         color: @color_white;
         
@@ -29,28 +39,37 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        // width: 148px;
         width: 42.5%;
-        height: 148px;
-        .mmd-block({
-            height: 111px;
+        height: 13.473684vh;
+        .md-block({
+            width: 100%;
+            height: 8.473684vh;
+        });
+        .xs-block({
+            width: 40vw;
+            height: 12.473684vh;
         });
         .line{
             position: relative;
             left: 28%;
             display: flex;
             flex-direction: column;
-            // width: 56.24px;
             width: 38%;
-            // height: 9.37px;
             height: 6.5%;
             border-radius: 4px;
             margin-bottom: 7.4px;
             background-color:@color_white;
             &:nth-child(2n){
-                // width: 69.56px;
                 width: 47%;
             }
         }
+    }
+    &.animated{
+        .from(@break_md,{
+            .animated({
+                .fadeIn();
+                .delay(0.6s);
+            });
+        });
     }
 }
